implementations.  The GTK version requires at least version 1.3.1 of
libwebkitgtk-dev, which is the default on most of the recent Linux
distributions.  Please note that although these new classes and
libraries are using names based on "WebView" I have put the wxPython
verison of them in the wx.html2 module because the wxWebKit project
already produces a wx.webview module for wxPython.




2.9.2.4
-------
* 9-Sept-2011

Try, try again...  Fixed an indentation bug that crept in somewhere
along the way.



2.9.2.3
-------
* 8-Sept-2011

Fixed a bug that was causing the base class methods of
wx.richtext.RichTextCtrl to be called incorrectly, causing a crash.



2.9.2.2
-------
* 5-Sept-2011

Fixed a problem with wx.ListCtrl.InsertStringItem when an imageIndex
was not passed.  Change the listctrl to not always assume that there
is an image.

Several fixes for the wx.lib.agw modules.

Fixed a problem in wxGrid on OSX-cocoa where it would close the cell
editor immediately because of extra kill focus events.

Added an OSX implementation for the wxRegion constructor taking a
sequence of points.

Added the ability to use the Cairo backend for wx.GraphicsContext on
Windows.  The Cairo libraries are loaded dynamically on-demand, so
there is not a runtime dependency on Cairo for applications that do
not use it.  The Cairo DLL and its dependencies are bundled with the
wxPython installers.  We expect to be able to also add dynamic loading
of Cairo for OSX soon, (but if anybody would like to volunteer that
would be nice too.)  To create a Cairo graphics context you first
have to get the Cairo GraphicsRenderer and then use it to create the
context, like this::

    cr = wx.GraphicsRenderer.GetCairoRenderer()
    ctx = cr.CreateContext(dc)

If either GetCairoRenderer or CreateContext fails (either it's not
supported or the Cairo shared libraries can not be found) then None
will be returned, so be sure to check the return values.  Using Cairo