@@ -73,6 +73,11 @@ samples/embedded
 samples/frogedit
 samples/hangman
 samples/mainloop
+samples/pubsub
+samples/pubsub/advanced
+samples/pubsub/basic_arg1
+samples/pubsub/basic_kwargs
+samples/pubsub/basic_v1
 samples/pySketch
 samples/pySketch/images
 samples/simple
