@@ -589,6 +589,16 @@ Source: "samples\hangman\*.py";             DestDir: "{app}\samples\hangman";
 
 Source: "samples\mainloop\*.py";            DestDir: "{app}\samples\mainloop";
 
+Source: "samples\pubsub\*.bat";            DestDir: "{app}\samples\pubsub";
+Source: "samples\pubsub\advanced\*.txt";   DestDir: "{app}\samples\advanced";
+Source: "samples\pubsub\advanced\*.py";    DestDir: "{app}\samples\advanced";
+Source: "samples\pubsub\basic_arg1\*.txt";   DestDir: "{app}\samples\basic_arg1";
+Source: "samples\pubsub\basic_arg1\*.py";    DestDir: "{app}\samples\basic_arg1";
+Source: "samples\pubsub\basic_kwargs\*.txt";   DestDir: "{app}\samples\basic_kwargs";
+Source: "samples\pubsub\basic_kwargs\*.py";    DestDir: "{app}\samples\basic_kwargs";
+Source: "samples\pubsub\basic_v1\*.txt";   DestDir: "{app}\samples\basic_v1";
+Source: "samples\pubsub\basic_v1\*.py";    DestDir: "{app}\samples\basic_v1";
+
 Source: "samples\pySketch\*.py";            DestDir: "{app}\samples\pySketch";
 Source: "samples\pySketch\images\*.bmp";    DestDir: "{app}\samples\pySketch\images";
 
@@ -687,6 +697,14 @@ Type: files; Name: "{app}\samples\hangman\*.pyo";
 Type: files; Name: "{app}\samples\hangman\*.txt";
 Type: files; Name: "{app}\samples\mainloop\*.pyc";
 Type: files; Name: "{app}\samples\mainloop\*.pyo";
+Type: files; Name: "{app}\samples\pubsub\advanced\*.pyc";
+Type: files; Name: "{app}\samples\pubsub\advanced\*.pyo"; 
+Type: files; Name: "{app}\samples\pubsub\basic_arg1\*.pyc";
+Type: files; Name: "{app}\samples\pubsub\basic_arg1\*.pyo"; 
+Type: files; Name: "{app}\samples\pubsub\basic_kwargs\*.pyc";
+Type: files; Name: "{app}\samples\pubsub\basic_kwargs\*.pyo"; 
+Type: files; Name: "{app}\samples\pubsub\basic_v1\*.pyc";   
+Type: files; Name: "{app}\samples\pubsub\basic_v1\*.pyo";    
 Type: files; Name: "{app}\samples\pySketch\*.pyc";
 Type: files; Name: "{app}\samples\pySketch\*.pyo";
 Type: files; Name: "{app}\samples\simple\*.pyc";
@@ -747,7 +765,7 @@ def find_DLLs():
     if os.environ.get('CPU', '') == 'AMD64':
         # Just hard-code it for now until a good solution for finding
         # the right dumpbin can be found...
-        return '292u', sys.version[:3]
+        return '293u', sys.version[:3]
         
     WXDLLVER = PYTHONVER = None
 
