@@ -40,6 +40,8 @@ distributions.  Please note that although these new classes and
 libraries are using names based on &quot;WebView&quot; I have put the wxPython
 verison of them in the wx.html2 module because the wxWebKit project
 already produces a wx.webview module for wxPython.</p>
+<p>The wx.lib.pubsub package has been updated to the latest verison and
+several examples have been added to the samples folder.</p>
 </div>
 <div class="section" id="id2">
 <h1>2.9.2.4</h1>
