@@ -33,6 +33,9 @@ libraries are using names based on "WebView" I have put the wxPython
 verison of them in the wx.html2 module because the wxWebKit project
 already produces a wx.webview module for wxPython.
 
+The wx.lib.pubsub package has been updated to the latest verison and
+several examples have been added to the samples folder.
+
 
 
 
